fix mobile menu alignment, overlay gradient

--- a/styles/sass/layout/_header.sass
+++ b/styles/sass/layout/_header.sass
@@ -13,8 +13,8 @@
   width: 100vw
   min-height: 100vh
   height: auto
-  background-color: hsla(0, 0%, 0%, 0.5)
-  padding: 24px 37px 24px 32px
+  background: linear-gradient(rgba(0, 0, 0, 0.5) 313px, transparent calc(100vh - 80px))
+  padding: 24px
 
 .header-narrow__modal--active
   display: block
